...
                                        <rect key="frame" x="0.0" y="125" width="636" height="33"/>
                                        <fontDescription key="fontDescription" type="system" weight="heavy" pointSize="17"/>
                                        <state key="normal" title="تسجيل الدخول">
                                            <color key="titleColor" systemColor="systemIndigoColor" red="0.34509803919999998" green="0.33725490200000002" blue="0.83921568629999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleAspectFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" placeholder="البريد الإلكتروني" textAlignment="right" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="C5E-Oa-ALv" customClass="HoshiTextField" customModule="TextFieldEffects">
                                                <rect key="frame" x="0.0" y="0.0" width="296" height="50"/>
                                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="70" width="334" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="left" contentVerticalAlignment="center" placeholder="كلمة المرور" textAlignment="right" minimumFontSize="20" translatesAutoresizingMaskIntoConstraints="NO" id="Vhr-zc-8V5" customClass="HoshiTextField" customModule="TextFieldEffects">
                                                <rect key="frame" x="0.0" y="0.0" width="296" height="50"/>
                                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="0.0" width="334" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" placeholder="الاسم" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="9j5-ZN-ZhF" customClass="HoshiTextField" customModule="TextFieldEffects">
                                                <rect key="frame" x="0.0" y="0.0" width="296" height="50"/>
                                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="167.99999999999997" width="334" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" placeholder="رقم الهوية الوطنية/الإقامة" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="oxL-Qj-hCW" customClass="HoshiTextField" customModule="TextFieldEffects">
                                                <rect key="frame" x="0.0" y="0.0" width="296" height="50"/>
                                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        <rect key="frame" x="0.0" y="336" width="334" height="50"/>
                                        <subviews>
                                            <textField opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="fill" contentVerticalAlignment="center" placeholder="إعادة كلمة المرور" textAlignment="right" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="Lza-pU-37a" customClass="HoshiTextField" customModule="TextFieldEffects">
                                                <rect key="frame" x="0.0" y="0.0" width="296" height="50"/>
                                                <color key="backgroundColor" systemColor="tertiarySystemGroupedBackgroundColor" red="0.94901960780000005" green="0.94901960780000005" blue="0.96862745100000003" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                        <state key="normal" title="تسجيل">
                                            <color key="titleColor" name="white"/>
                                        </state>
...
                                                <accessibility key="accessibilityConfiguration" identifier="profile"/>
                                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                                <state key="normal" title="الصفحة الرئيسية">
                                                    <color key="titleColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                </state>
...
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="trailing" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="xM4-6g-xjL">
                                                <rect key="frame" x="0.0" y="0.0" width="105" height="30"/>
                                                <accessibility key="accessibilityConfiguration" identifier="logOut"/>
                                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                                <state key="normal" title="تسجيل الخروج">
...
                                </constraints>
                                <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="17"/>
                                <state key="normal" title="حذف الغرفة">
                                    <color key="titleColor" name="white"/>
                                </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
                                        <state key="normal" title="المادة">
                                            <color key="titleColor" systemColor="systemGrayColor" red="0.5568627451" green="0.5568627451" blue="0.57647058819999997" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                        </state>
...
                                        </constraints>
                                        <fontDescription key="fontDescription" name="GESSTwoLight-Light" family="GE SS Two" pointSize="18"/>
