...
                    ref.observe(.value) { snapshot in
                        
                        if snapshot.exists() == false {
                            let label = UILabel(frame: CGRect(x: 0, y: 0, width: 200, height: 21))
                            label.center = self.view.center
                            label.textAlignment = .center
                            label.text = "لا يوجد غرف دراسية مضافة"
                            self.view.addSubview(label)
                        }else{
                            self.data.removeAll()
                            self.dataImg.removeAll()
                            self.cellId.removeAll()
                        for case let child as DataSnapshot in snapshot.children {
...
