...
      // alter the user for the user id
        let alert = UIAlertController(title: "إضافة طالب", message: "الرجاء ادخال رقم الطالب الخاص الذي يتكون من ٥ خانات فقط باللغة الانجليزية", preferredStyle: .alert)
        alert.addTextField { (textField) in
            textField.placeholder = "1D3f5"
        }
        alert.addAction(UIAlertAction(title: "إلغاء", style: .destructive, handler: nil))
        alert.addAction(UIAlertAction(title: "تأكيد", style: .default, handler: { [weak alert] (_) in
            userUniqueId = (alert?.textFields![0].text)!
            if userUniqueId.elementsEqual("") || userUniqueId.count >= 6 {
                 let alert = UIAlertController(title:"لم تتم الاضافة" , message: "لم تتم الاضافة ، الرجاء المحاولة مرة اخرى", preferredStyle: .alert)
                     alert.addAction(UIAlertAction(title: "حسناً", style: .default, handler: nil))
                self.present(alert, animated: true, completion: nil) } else {
                var isExist = false
...
        else { return }
        let name = self.studentsNames[indexPath.item]
        // ref
        
        let ref = Database.database().reference().child("sciences").child(userId).child(classId).child("studentsList").child(self.studentsID[indexPath.item])
        // alter
            let alert = UIAlertController(title: "تنبيه", message: "هل تريد تأكيد الحذف ؟", preferredStyle: .alert)
                   alert.addAction(UIAlertAction(title: "إلغاء", style: .destructive, handler: nil))
                  alert.addAction(UIAlertAction(title: " تأكيد", style: .default, handler: { action in
                      ref.removeValue()
                    self.studentsID.remove(at: indexPath.item)
                    self.studentsUniqueID.remove(at: indexPath.item)
                    if self.studentsID.count == 0 {
...
